implemented basic editor and preview functionality

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray">
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
 </body>
 </html>
